--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stafo-cli",
   "version": "1.0.1",
-  "description": "CLI tool to count total stars and forks on a github repository",
+  "description": "Command line tool find total stars and forks across a github repository",
   "license": "MIT",
   "repository": {
     "type": "git",
