--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "count"
   ],
   "dependencies": {
-    "stafo": "^1.0.0",
     "chalk": "^1.1.3",
-    "update-notifier": "^1.0.2",
+    "got": "^6.7.1",
+    "log-update": "1.0.2",
     "ora": "^0.2.1",
-    "log-update": "1.0.2"
+    "stafo": "^1.0.0",
+    "update-notifier": "^1.0.2"
   },
   "devDependencies": {
     "ava": "*",
